--- a/src/app/modules/home/components/login/login.component.less
+++ b/src/app/modules/home/components/login/login.component.less
@@ -2,3 +2,13 @@
   display: flex;
   flex-direction: column;
 }
+
+.mat-card {
+  width: 350px;
+}
+
+@media only screen and (max-width: 400px) {
+  .mat-card {
+    width: 100%;
+  }
+}
