--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -1,57 +1,91 @@
 <div class="container-fluid mt-3">
   <div class="row">
-    <div class="col">
-      <div class="example-container mat-elevation-z8">
-        <!-- <div class="example-loading-shade" *ngIf="isLoadingResults || isRateLimitReached">
+    <div class="col mb-3">
+      <mat-card class="mat-elevation-z2">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb mb-0 bg-light">
+            <li class="breadcrumb-item active" aria-current="page"><a class="folder-node" (click)="navigateToNode(0)">repo</a></li>
+            <li class="breadcrumb-item active" aria-current="page" *ngFor="let node of path; index as i"><a class="folder-node" (click)="navigateToNode(i + 1)">{{ node }}</a></li>
+          </ol>
+        </nav>
+      </mat-card>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-3 col-md-3 col-sm-12 col-12 mb-3" *ngIf="isXS">
+      <ng-container *ngTemplateOutlet="actionCard"></ng-container>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-lg-9 col-md-9 col-sm-12 col-12">
+      <div class="example-container mat-elevation-z2">
+        <div class="example-loading-shade" *ngIf="isLoadingResults">
           <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-          <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
+          <!-- <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
             GitHub's API rate limit has been reached. It will be reset in one minute.
-          </div>
-        </div> -->
+          </div> -->
+        </div>
       
         <div class="example-table-container">
       
-          <table mat-table [dataSource]="repo$" class="example-table" matSort matSortActive="createdDate" matSortDisableClear
-            matSortDirection="desc">
-            <!-- Number Column -->
+          <table mat-table [dataSource]="dataSource" class="example-table" matSort > <!-- matSortActive="createdDate" matSortDirection="desc" -->
+            <!-- Name Column -->
             <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef>Name</th>
-              <td mat-cell *matCellDef="let row">{{row.name}}</td>
+              <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
+              <td mat-cell *matCellDef="let row" class="text-truncate">{{ row.name }}</td>
             </ng-container>
       
-            <!-- Title Column -->
+            <!-- Date Created Column -->
             <ng-container matColumnDef="createdDate">
-              <th mat-header-cell *matHeaderCellDef>Date Created</th>
-              <td mat-cell *matCellDef="let row">{{row.creationDate}}</td>
+              <th mat-header-cell mat-sort-header arrowPosition="before" class="text-left" *matHeaderCellDef>Date Created</th>
+              <td mat-cell *matCellDef="let row">{{ row.creationDate | date : "short" }}</td>
             </ng-container>
       
-            <!-- State Column -->
+            <!-- Members Column -->
             <ng-container matColumnDef="members">
-              <th mat-header-cell *matHeaderCellDef>Members</th>
-              <td mat-cell *matCellDef="let row">{{row.absPath}}</td>
+              <th mat-header-cell mat-sort-header arrowPosition="before" *matHeaderCellDef>Members</th>
+              <td mat-cell *matCellDef="let row">Only Me</td>
             </ng-container>
 
             <!-- Action Column -->
             <ng-container matColumnDef="action">
-              <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let row">{{row.name}}</td>
+              <th mat-header-cell *matHeaderCellDef><button mat-icon-button class="p-0"><mat-icon>list</mat-icon></button></th>
+              <td mat-cell *matCellDef="let row"><button class="p-0" mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button></td>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item>Share</button>
+                <button mat-menu-item>Download</button>
+                <button mat-menu-item>Star</button>
+                <button mat-menu-item>Rename</button>
+                <button mat-menu-item>Move</button>
+                <button mat-menu-item>Copy</button>
+                <button mat-menu-item>Delete</button>
+              </mat-menu>
             </ng-container>
       
-            <!-- Created Column -->
-            <!-- <ng-container matColumnDef="created">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-                Created
-              </th>
-              <td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
-            </ng-container> -->
-      
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getFolderContents(row)"></tr>
           </table>
+          <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"></mat-paginator>
         </div>
-        <mat-paginator [length]="resultsLength" [pageSize]="30"></mat-paginator>
       </div>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-12 col-12 mb-3" *ngIf="!isXS">
+      <ng-container *ngTemplateOutlet="actionCard"></ng-container>
     </div>
   </div>
 </div>
+
+
+<ng-template #actionCard>
+  <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
+
+  <mat-card class="mat-elevation-z2">
+    <button class="px-3" mat-button color="primary">Create new file</button>
+    <button class="px-3" mat-button (click)="uploader.click()">Upload files</button>
+    <button class="px-3" mat-button>Upload folder</button>
+    <button class="px-3" mat-button (click)="createNewFolder()">New folder</button>
+  </mat-card>
+</ng-template>
 
