--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -14,7 +14,9 @@
 
   <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-12 col-12 mb-3" *ngIf="isXS">
-      <ng-container *ngTemplateOutlet="actionCard"></ng-container>
+      <!-- <ng-container *ngTemplateOutlet="actionCard"></ng-container> -->
+      <div *ngIf="rowSelected; then selectedActionCard; else actionCard"></div>
+
     </div>
   </div>
   
@@ -23,14 +25,26 @@
       <div class="example-container mat-elevation-z2">
         <div class="example-loading-shade" *ngIf="isLoadingResults">
           <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-          <!-- <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
-            GitHub's API rate limit has been reached. It will be reset in one minute.
-          </div> -->
         </div>
       
         <div class="example-table-container">
       
           <table mat-table [dataSource]="dataSource" class="example-table" matSort > <!-- matSortActive="createdDate" matSortDirection="desc" -->
+            <!-- Checkbox Column -->
+            <ng-container matColumnDef="select">
+              <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+                  [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                </mat-checkbox>
+              </th>
+              <td mat-cell *matCellDef="let row; let i = index">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                  [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                </mat-checkbox>
+              </td>
+            </ng-container>
+            
+            
             <!-- Name Column -->
             <ng-container matColumnDef="name">
               <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
@@ -46,39 +60,55 @@
             <!-- Members Column -->
             <ng-container matColumnDef="members">
               <th mat-header-cell mat-sort-header arrowPosition="before" *matHeaderCellDef>Members</th>
-              <td mat-cell *matCellDef="let row">Only Me</td>
+              <td mat-cell *matCellDef="let row">{{ row.isShared ? "Members" : "Only Me" }}</td>
             </ng-container>
 
             <!-- Action Column -->
             <ng-container matColumnDef="action">
-              <th mat-header-cell *matHeaderCellDef><button mat-icon-button class="p-0"><mat-icon>list</mat-icon></button></th>
-              <td mat-cell *matCellDef="let row"><button class="p-0" mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button></td>
-              <mat-menu #menu="matMenu">
-                <button mat-menu-item>Share</button>
-                <button mat-menu-item>Download</button>
-                <button mat-menu-item>Star</button>
-                <button mat-menu-item>Rename</button>
-                <button mat-menu-item>Move</button>
-                <button mat-menu-item>Copy</button>
-                <button mat-menu-item>Delete</button>
-              </mat-menu>
+              <th mat-header-cell *matHeaderCellDef>
+                <button mat-icon-button class="p-0"><mat-icon>list</mat-icon></button>
+              </th>
+              <td mat-cell *matCellDef="let row">
+                <button class="p-0" mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
+                <mat-menu #menu="matMenu">
+                  <button mat-menu-item>Share</button>
+                  <button mat-menu-item (click)="downloadItem(row.name)">Download</button>
+                  <button mat-menu-item>Star</button>
+                  <button mat-menu-item>Rename</button>
+                  <button mat-menu-item>Move</button>
+                  <button mat-menu-item>Copy</button>
+                  <button mat-menu-item (click)="deleteItem(row)">Delete</button>
+                </mat-menu>
+              </td>
             </ng-container>
       
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getFolderContents(row)"></tr>
           </table>
-          <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-12 col-12 mb-3" *ngIf="!isXS">
-      <ng-container *ngTemplateOutlet="actionCard"></ng-container>
+      <!-- <ng-container *ngTemplateOutlet="actionCard"></ng-container> -->
+      <div *ngIf="rowSelected; then selectedActionCard; else actionCard"></div>
     </div>
   </div>
 </div>
 
 
 <ng-template #actionCard>
+  <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
+
+  <mat-card class="mat-elevation-z2">
+    <button class="px-3" mat-button color="primary">Create new file</button>
+    <button class="px-3" mat-button (click)="uploader.click()">Upload files</button>
+    <button class="px-3" mat-button>Upload folder</button>
+    <button class="px-3" mat-button (click)="createNewFolder()">New folder</button>
+  </mat-card>
+</ng-template>
+
+<ng-template #selectedActionCard>
   <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
 
   <mat-card class="mat-elevation-z2">
