--- a/src/app/modules/upload-file/components/upload-progress/upload-progress.component.html
+++ b/src/app/modules/upload-file/components/upload-progress/upload-progress.component.html
@@ -5,7 +5,7 @@
                 current file - {{ progress$ | async }}%
             </div>
             <div class="col-auto">
-                <button mat-button class="px-0" (click)="viewDetails()">View details</button>
+                <button mat-button class="px-0 py-3" (click)="viewDetails()">View details</button>
                 <button mat-button class="px-0" *ngIf="completed$ | async">Close</button>
             </div>
         </div>
