--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -38,7 +38,7 @@
                 </mat-checkbox>
               </th>
               <td mat-cell *matCellDef="let row; let i = index">
-                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="setSelectionState($event, row)" 
                   [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
                 </mat-checkbox>
               </td>
@@ -77,7 +77,7 @@
                   <button mat-menu-item>Rename</button>
                   <button mat-menu-item>Move</button>
                   <button mat-menu-item>Copy</button>
-                  <button mat-menu-item (click)="deleteItem(row)">Delete</button>
+                  <button mat-menu-item (click)="deleteItem(0, row)">Delete</button>
                 </mat-menu>
               </td>
             </ng-container>
@@ -109,13 +109,10 @@
 </ng-template>
 
 <ng-template #selectedActionCard>
-  <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
-
   <mat-card class="mat-elevation-z2">
-    <button class="px-3" mat-button color="primary">Create new file</button>
-    <button class="px-3" mat-button (click)="uploader.click()">Upload files</button>
-    <button class="px-3" mat-button>Upload folder</button>
-    <button class="px-3" mat-button (click)="createNewFolder()">New folder</button>
+    <button class="px-3" mat-button color="primary">Download</button>
+    <button class="px-3" mat-button (click)="uploader.click()">Rename</button>
+    <button class="px-3" mat-button (click)="deleteItem(1, row)">Delete</button>
   </mat-card>
 </ng-template>
 
