--- a/src/app/modules/dashboard/components/repository/repository.component.less
+++ b/src/app/modules/dashboard/components/repository/repository.component.less
@@ -81,10 +81,21 @@ th, td {
   width: 100px !important;
 }
 
+/* Styles for card spacing */
+
+.action-card {
+  padding: 8px;
+}
+
+.path-card {
+  padding: 8px 18px;
+}
+
 /* Breadcrumb styles*/
 
-.breadcrumb, ol, li {
-  background-color: none;
+.breadcrumb {
+  background-color: transparent !important;
+  padding: 5px;
 }
 
 a.folder-node:hover {
