--- a/src/app/modules/dashboard/components/new-folder/new-folder.component.less
+++ b/src/app/modules/dashboard/components/new-folder/new-folder.component.less
@@ -5,3 +5,15 @@
 .mat-list-item {
     padding: initial 0 initial 0 !important;
 }
+
+.mat-radio-label-content {
+    padding-left: 15px !important;
+}
+
+.mat-list-item-content {
+    padding-left: 5px !important;
+}
+
+.folder-icon {
+    font-size: 40px;
+}
