--- a/src/app/modules/dashboard/components/new-folder/new-folder.component.html
+++ b/src/app/modules/dashboard/components/new-folder/new-folder.component.html
@@ -2,8 +2,14 @@
     <div class="row">
         <div class="col">
             <form [formGroup]="newFolderForm">
-                
-                <h2 mat-dialog-title><mat-icon [inline]="true">folder</mat-icon> Create new folder</h2>
+                <div class="row">
+                    <div class="col-auto pb-2">
+                        <div *ngIf="(mode === 1); then sharedFolderIcon; else folderIcon"></div>
+                    </div>
+                    <div class="col">
+                        <h2 mat-dialog-title class="mt-3">Create new <span *ngIf="mode === 1">shared</span> folder</h2>
+                    </div>
+                </div>
 
                 <mat-dialog-content>
                     <mat-form-field appearance="outline">
@@ -15,21 +21,51 @@
                     <mat-list>
                         <h3 mat-subheader class="px-0 pb-1">Who has access</h3>
                         <mat-divider class="mb-2"></mat-divider>
-                        <mat-radio-group formControlName="Accessability" [value]="0">
-                            <mat-list-item>
-                                <mat-radio-button [value]="0" class="mb-2">
+                        <mat-radio-group formControlName="Accessibility" [value]="0" (change)="setMode($event)">
+                            <mat-radio-button [value]="0" class="mb-2">
+                                <mat-list-item>
                                     <h4 mat-line>Only You</h4>
                                     <p mat-line>Only you can access this folder</p>
-                                </mat-radio-button>
-                            </mat-list-item>
-                            <mat-list-item>
-                                <mat-radio-button [value]="1">
+                                </mat-list-item>
+                            </mat-radio-button>
+                            <mat-radio-button [value]="1">
+                                <mat-list-item>
                                     <h4 mat-line>Group of people</h4>
                                     <p mat-line>Share this folder with a group of people</p>
-                                </mat-radio-button>
-                            </mat-list-item>
+                                </mat-list-item>
+                            </mat-radio-button>
                         </mat-radio-group>
                     </mat-list>
+                    <div *ngIf="mode === 1" class="mt-3">
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="mb-0">Add people by email</h3>
+                            </div>
+                            <div class="col-auto ml-auto">
+                                <button mat-icon-button color="primary" class="mb-1" (click)="addInvitee()"><mat-icon>add</mat-icon></button>
+                            </div>
+                        </div>
+                        <div class="row mb-2">
+                            <div class="col">
+                                <mat-divider></mat-divider>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div formArrayName="Invitees">
+                                    <div class="row" *ngFor="let invitee of inviteeControls; index as i; trackBy: trackByFn">
+                                        <div class="col">
+                                            <mat-form-field appearance="outline">
+                                                <mat-label>Invitee Email</mat-label>
+                                                <input matInput [formControlName]="i">
+                                            </mat-form-field>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </mat-dialog-content>
                 
                 <div class="row">
@@ -42,3 +78,11 @@
         </div>
     </div>
 </div>
+
+<ng-template #sharedFolderIcon>
+    <mat-icon class="folder-icon" [inline]="true">folder_shared</mat-icon>
+</ng-template>
+
+<ng-template #folderIcon>
+    <mat-icon class="folder-icon" [inline]="true">folder</mat-icon>
+</ng-template>
