Updated registration view to accept username. (Username will be used in public page as method of authenticating if the page exists)

--- a/src/app/modules/dashboard/components/main/main.component.html
+++ b/src/app/modules/dashboard/components/main/main.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-3" *ngIf="isXS">
   <div class="row">
     <div class="col">
-      <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection"></file-actions>
+      <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection" [userId]="userId"></file-actions>
     </div>
   </div>
 </div>
