--- a/src/app/modules/home/components/login/login.component.less
+++ b/src/app/modules/home/components/login/login.component.less
@@ -7,7 +7,12 @@
   width: 350px;
 }
 
-@media only screen and (max-width: 400px) {
+.mat-divider-horizontal {
+  position: relative !important;
+}
+
+
+@media only screen and (max-width: 380px) {
   .mat-card {
     width: 100%;
   }
