--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -95,7 +95,7 @@
     <!-- right side column: Appears when the viewport size is medium or large -->
 
     <div class="col-lg-2 col-md-2 col-sm-12 col-12 pl-0 action-sidebar" *ngIf="!isXS">
-      <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection"></file-actions>
+      <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection" [userId]="id"></file-actions>
     </div>
   </div>
 </div>
