--- a/src/app/modules/home/components/register/register.component.less
+++ b/src/app/modules/home/components/register/register.component.less
@@ -2,3 +2,18 @@
   display: flex;
   flex-direction: column;
 }
+
+.mat-card {
+  width: 350px;
+}
+
+.mat-divider-horizontal {
+  position: relative !important;
+}
+
+
+@media only screen and (max-width: 380px) {
+  .mat-card {
+    width: 100%;
+  }
+}
