Updated file-actions component for accepting username and userId. debugged issue with progress indicator when uploading multiple, small sized files.

--- a/src/app/modules/dashboard/components/main/main.component.html
+++ b/src/app/modules/dashboard/components/main/main.component.html
@@ -1,7 +1,13 @@
 <div class="container-fluid mt-3" *ngIf="isXS">
   <div class="row">
     <div class="col">
-      <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection" [userId]="userId"></file-actions>
+      <file-actions 
+        [cwd]="cwd" 
+        [rowSelected]="rowSelected" 
+        [userId]="userId" 
+        [selection]="selection" 
+        [userName]="userName"
+      ></file-actions>
     </div>
   </div>
 </div>
@@ -84,7 +90,13 @@
       </mat-accordion>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-12 col-12 mb-3 pl-0" *ngIf="!isXS">
-      <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection"></file-actions>
+      <file-actions 
+        [cwd]="cwd" 
+        [rowSelected]="rowSelected" 
+        [userId]="userId" 
+        [selection]="selection" 
+        [userName]="userName"
+      ></file-actions>
     </div>
   </div>
 </div>
