--- a/src/app/modules/public-share/components/public-share/public-share.component.html
+++ b/src/app/modules/public-share/components/public-share/public-share.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isLoaded">
-    <repository [mode]="1" [id]="id"></repository>
+    <repository [mode]="1" [userId]="id" [userName]="userName"></repository>
 </div>
 
 <div *ngIf="!isLoaded">
