--- a/src/app/modules/dashboard/components/file-actions/file-actions.component.html
+++ b/src/app/modules/dashboard/components/file-actions/file-actions.component.html
@@ -3,16 +3,18 @@
 <ng-template #actionCard>
     <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
 
-    <mat-card class="mat-elevation-z2 action-card">
-        <button class="px-3" mat-button color="primary">Create new file</button>
-        <button class="px-3" mat-button (click)="uploader.click()">Upload files</button>
-        <button class="px-3" mat-button >Upload folder</button>
-        <button class="px-3" mat-button (click)="createNewFolder()">New folder</button>
+    <mat-card class="mat-elevation-z2 action-card px-0">
+        <mat-action-list>
+            <!-- <button mat-list-item class="px-3" color="primary">Create new file</button> -->
+            <button mat-list-item (click)="uploader.click()"> <mat-icon class="mr-2">cloud_upload</mat-icon> Upload files</button>
+            <!-- <button mat-list-item class="px-3" >Upload folder</button> -->
+            <button mat-list-item (click)="createNewFolder()"><mat-icon class="mr-2">create_new_folder</mat-icon>New folder</button>
+        </mat-action-list>
     </mat-card>
 </ng-template>
 
 <ng-template #selectedActionCard>
-    <mat-card class="mat-elevation-z2 action-card">
+    <mat-card class="mat-elevation-z2 action-card px-0">
         <button class="px-3" mat-button color="primary">Download</button>
         <button class="px-3" mat-button >Rename</button>
         <button class="px-3" mat-button (click)="deleteItem(1, row)">Delete</button>
