--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -12,17 +12,8 @@
     </div>
   </div>
 
-  <div class="row">
-    <!-- Top row: Appears when the viewport size is small or extra small -->
-    <div class="col-lg-2 col-md-2 col-sm-12 col-12 mb-3" *ngIf="isXS">
-      <file-actions 
-        [cwd]="cwd" 
-        [rowSelected]="rowSelected" 
-        [selection]="selection"
-        [userId]="userId"
-        [userName]="userName"
-      ></file-actions>
-    </div>
+  <div hidden>
+    <file-actions [cwd]="cwd" [rowSelected]="rowSelected" [selection]="selection" [userId]="userId" [userName]="userName"></file-actions>
   </div>
   
   <div class="row">
@@ -71,7 +62,20 @@
             <!-- Action Column -->
             <ng-container matColumnDef="action">
               <th mat-header-cell *matHeaderCellDef>
+                <input type="file" hidden multiple (change)="uploadData($event)" #uploader>
                 <button mat-icon-button class="p-0"><mat-icon>list</mat-icon></button>
+                <button *ngIf="isXS" class="p-0" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu">
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                  <button *ngIf="!rowSelected" mat-menu-item (click)="uploader.click()"><mat-icon class="mr-2">cloud_upload</mat-icon> Upload files</button>
+                  <button *ngIf="!rowSelected" mat-menu-item (click)="createNewFolder()"><mat-icon class="mr-2">create_new_folder</mat-icon>New Folder</button>
+                  <button *ngIf="rowSelected" mat-menu-item>Star</button>
+                  <button *ngIf="rowSelected" mat-menu-item>Rename</button>
+                  <button *ngIf="rowSelected" mat-menu-item>Move</button>
+                  <button *ngIf="rowSelected" mat-menu-item>Copy</button>
+                  <button *ngIf="rowSelected" mat-menu-item (click)="deleteItem(1, row)">Delete</button>
+                </mat-menu>
               </th>
               <td mat-cell *matCellDef="let row">
                 <button class="p-0" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
