--- a/src/app/modules/dashboard/components/main/main.component.html
+++ b/src/app/modules/dashboard/components/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-3" *ngIf="isXS">
+<!-- <div class="container-fluid mt-3" *ngIf="isXS">
   <div class="row">
     <div class="col">
       <file-actions 
@@ -8,9 +8,14 @@
         [selection]="selection" 
         [userName]="userName"
       ></file-actions>
+      <mat-card>
+        <mat-form-field>
+          <input matInput>
+        </mat-form-field>
+      </mat-card>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="container-fluid mt-3">
   <div class="row mb-3">
