--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -23,16 +23,16 @@
   min-width: 35px !important;
 }
 
-.sidenav-container {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
+// .sidenav-container {
+//   display: flex;
+//   flex-direction: column;
+//   position: relative;
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+// }
 
-.mat-sidenav-container {
-  flex: 1 0 auto;
-}
+// .mat-sidenav-container {
+//   flex: 1 0 auto;
+// }
