--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -44,7 +44,7 @@
             <!-- Name Column -->
             <ng-container matColumnDef="name">
               <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
-              <td mat-cell *matCellDef="let row" class="text-truncate">{{ row.name }}</td>
+              <td mat-cell *matCellDef="let row" class="text-truncate"> {{ row.name }}</td> <!-- <img [src]="getIcon(row)"> -->
             </ng-container>
       
             <!-- Date Created Column -->
