--- a/src/app/modules/upload-file/components/upload-progress/upload-progress.component.html
+++ b/src/app/modules/upload-file/components/upload-progress/upload-progress.component.html
@@ -2,11 +2,11 @@
     <div class="container-fluid px-0">
         <div class="row" *ngIf="viewState$ | async as viewState">
             <div class="col">
-                current file - {{ progress$ | async }}%
+                <button mat-button class="px-0" (click)="viewDetails()">View details</button>
             </div>
             <div class="col-auto">
-                <button mat-button class="px-0" (click)="viewDetails()">View details</button>
-                <button mat-button class="px-0" *ngIf="(completed$ | async) as completed">Close</button>
+                <button mat-button class="px-0" *ngIf="(completed$ | async) as completed"><mat-icon>close</mat-icon></button>
+                {{ progress$ | async }}%
             </div>
         </div>
         <div class="row">
